--- a/todos-web/build-static/index.html
+++ b/todos-web/build-static/index.html
@@ -6,10 +6,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/2.a74c8725.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.687bf7a1.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.58aa5f6a.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.3258af2d.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.e90d339a.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.6baf1ff5.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.5df9cf26.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.a820b6e2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.310a20e0.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.0b5008f2.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.4fe7cd0d.js"><!-- HEAD_svelte-w60vmd_START --><link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"><!-- HEAD_svelte-w60vmd_END --><!-- HEAD_svelte-w60vmd_START --><link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"><!-- HEAD_svelte-w60vmd_END --><!-- HEAD_svelte-w60vmd_START --><link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"><!-- HEAD_svelte-w60vmd_END --><!-- HEAD_svelte-w60vmd_START --><link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"><!-- HEAD_svelte-w60vmd_END --><!-- HEAD_svelte-w60vmd_START --><link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"><!-- HEAD_svelte-w60vmd_END -->
@@ -19,7 +19,7 @@
 			
 			<script>
 				{
-					__sveltekit_6pon9x = {
+					__sveltekit_1ywyq7p = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -29,8 +29,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.687bf7a1.js"),
-						import("./_app/immutable/entry/app.6baf1ff5.js")
+						import("./_app/immutable/entry/start.58aa5f6a.js"),
+						import("./_app/immutable/entry/app.a820b6e2.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
